--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: Noto;
+    src: url(../fonts/notoFolder/Noto_Sans/NotoSans-Italic-VariableFont_wdth\,wght.ttf);
+}
+
+
 *{
     padding: 0px;
     margin: 0px;
@@ -34,6 +40,7 @@ p{
     word-wrap: break-word;
     line-height: 35px;
     margin: 30px 0;
+    font-family: Noto;
 }
 
 button{
